<resources>
    <string name="app_name">virtualEye</string>

    <!-- Connect Devices Activity -->
    <string name="text_view_paired_devices">Paired Devices</string>
    <string name="text_view_new_devices">Other Available Devices</string>
    <string name="button_scan_for_new_devices">Scan For New Devices</string>

    <!-- Toast and waring messages -->
    <string name="does_not_have_bluetooth">This Device Does not Support Bluetooth</string>
    <string name="no_paired_devices">No Paired Bluetooth Devices Found</string>
    <string name="disconnect">Disconnect</string>

    <!-- MainActivity -->

    <string name="enterData">Enter Data</string>
    <string name="send">Send</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="intensity">Intensity</string>
    <string name="distance">Distance</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="btn_device">Device</string>
    <string name="btn_cloud">Cloud</string>
    <string name="confirm_permission">This app need to access files on your device.</string>
    <string name="confirm_camera">This app need to access camera on your device.</string>
    <string name="error_not_found">No text found</string>
    <string name="error_setup_model">Error while setting up the model</string>
    <string name="error_image_init">Image classifier has not been initialized; Skipped.</string>
    <string name="error_run_model">Error running model inference</string>
    <string name="error_read_label">Failed to read label list.</string>
    <string name="error_detect">Nothing detected</string>

    <string name="language_identification_hint">Fill in your text here…</string>
    <string name="language_identification_btn1">Detect Language</string>
    <string name="language_identification_btn2">Detect Languages</string>
    <string name="language_identification_result">Language: %s</string>
    <string name="language_identification_error">Can’t identify language.</string>

    <string name="smart_reply_btn">Suggest Me Replying Messages</string>
    <string name="smart_reply_error">The conversation\'s language isn\'t supported, so the result doesn\'t contain any suggestions.</string>

    <string name="translate_btn">Translate</string>
    <string name="translate_edt">ลองพิมพ์ประโยคภาษาไทยมาเลย</string>
    <string name="translate_loading">Translate button will be enabled after translation model is downloaded.\n\nPlease wait…</string>
</resources>
